# SRF

./: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  mrc.code-workspace  srf.code-workspace
ci/conda/environments/: dev_env.yml
cmake/: dependencies.cmake
cpp/: CMakeLists.txt
cpp/mrc/: CMakeLists.txt
cpp/mrc/benchmarks/: bench_coroutines.cpp  bench_fibers.cpp
cpp/mrc/tests/: CMakeLists.txt  radar.cu  radar.hpp  test_ops.cpp  test_radar.cpp  test_thread.cpp
cpp/sre/: CMakeLists.txt
cpp/sre/include/sre/: expected.hpp  sre.hpp  version.hpp
cpp/sre/include/sre/common/: expected.hpp  macros.hpp
cpp/sre/include/sre/coro/: event.hpp  latch.hpp  poll.hpp  ring_buffer.hpp  schedule_policy.hpp  sync_wait.hpp  task.hpp  thread_local_state.hpp  thread_pool.hpp  when_all.hpp
cpp/sre/include/sre/coro/concepts/: awaitable.hpp  buffer.hpp  executor.hpp  promise.hpp  range_of.hpp
cpp/sre/include/sre/coro/detail/: void_value.hpp
cpp/sre/include/sre/system/: thread.hpp
cpp/sre/include/sre/trace/: context_stack.hpp  trace.hpp
cpp/sre/libsre/: sre.cpp
cpp/sre/libsre/coro/: event.cpp  sync_wait.cpp  thread_local_state.cpp  thread_pool.cpp
cpp/sre/libsre/system/: thread.cpp
cpp/sre/libsre/trace/: runtime_context.cpp  runtime_context.hpp  trace.cpp
cpp/sre/tests/: CMakeLists.txt  test_coroutines.cpp  test_main.cpp  test_tracing.cpp  test_tracing.hpp
cpp/sre/tests/coro/: test_event.cpp  test_latch.cpp  test_ring_buffer.cpp
docs/: concepts.md
docs/design/: concepts.md
include/srf/: types.hpp
include/srf/codable/: decode.hpp  encode.hpp  encoded_object.hpp  type_traits.hpp
include/srf/core/: error.hpp  runtime.hpp  std23_expected.hpp  task_queue.hpp  thread.hpp
include/srf/coro/: event.hpp  generator.hpp  latch.hpp  resumable.hpp  ring_buffer.hpp  schedule_policy.hpp  sync_wait.hpp  task.hpp  thread_local_context.hpp  thread_pool.hpp  when_all.hpp
include/srf/manifold/: composite_manifold.hpp  connectable.hpp  egress.hpp  factory.hpp  ingress.hpp  load_balancer.hpp  manifold.hpp
include/srf/node/: rx_runnable.hpp  type_traits.hpp
include/srf/options/: options.hpp
include/srf/pubsub/: client_subscription_base.hpp  publisher.hpp  state.hpp  subscriber.hpp
include/srf/remote_descriptor/: storage.hpp
include/srf/runnable/: fiber_context.hpp  launch_control.hpp  thread_context.hpp
include/srf/segment/: egress_port.hpp  ingress_port.hpp
include/srf/utils/: macros.hpp  string_utils.hpp  type_utils.hpp
python/tests/: conftest.py  test_executor.py
src/internal/: expected.hpp
src/tests/: CMakeLists.txt  test_codable.cpp  test_control_plane.cpp  test_control_plane_components.cpp  test_core.cpp  test_cpp20.cpp  test_main.cpp  test_memory.cpp  test_network.cpp  test_pipeline.cpp  test_ucx.cpp
tests/: test_executor.cpp  test_node.cpp  test_segment.cpp
(+206 files in other folders)
